index.html page looking 9/10 and fully responsive. Fix spacings for 10/10 look

--- a/sprint-1/styles/main.scss
+++ b/sprint-1/styles/main.scss
@@ -7,6 +7,7 @@ head,
 body {
   box-sizing: border-box;
   margin: -4;
+  color: #323232;
 }
 
 *,
@@ -29,17 +30,21 @@ UTILITY CLASSES
 ============ */
 
 .section-heading {
-  font-size: 36px;
-  line-height: 44px;
+  font-size: 24px;
+  line-height: 32px;
   font-family: "avenir-bold";
+  @include tablet {
+    font-size: 36px;
+    line-height: 44px;
+  }
 }
 
-.section-padding {
+.h4-paragraph {
+  font-size: 13px;
+  line-height: 18px;
   @include tablet {
-    padding: 2% 5%;
-  }
-  @include desktop {
-    padding: 3% 10%;
+    font-size: 14px;
+    line-height: 22px;
   }
 }
 
@@ -50,28 +55,30 @@ UTILITY CLASSES
 .header {
   display: flex;
   flex-direction: column;
+  align-items: center;
   background-color: #323232;
   color: #fafafa;
   height: 80px;
+
   @include tablet {
     flex-direction: row;
   }
 
-  img {
+  &__logo {
     margin-bottom: auto;
-    margin-top: 16px;
-    display: inline-block;
+    margin-top: auto;
+    // display: inline-block;
+
     @include tablet {
-      padding: 1rem;
-      margin-right: 56px;
+      margin-right: 5%;
       margin-left: 5%;
     }
     @include desktop {
-      padding-left: 9%;
+      margin-left: 13%;
     }
   }
 
-  ul {
+  &__list {
     list-style: none;
     display: flex;
     justify-content: space-around;
@@ -81,7 +88,8 @@ UTILITY CLASSES
       height: 100%;
     }
   }
-  li {
+
+  &__list-item {
     font-family: "avenir-demi";
     text-align: center;
     width: 50%;
@@ -96,11 +104,11 @@ UTILITY CLASSES
     }
   }
 
-  li:first-child {
+  &__list-item--bio {
     border-bottom: 5px solid #fafafa;
   }
 
-  li:nth-child(even) {
+  &__list-item--shows {
     color: #afafaf;
   }
 }
@@ -127,13 +135,15 @@ UTILITY CLASSES
     height: 670px;
   }
 
-  h1 {
+  &__banner-text {
     font-family: "avenir-bold";
-    font-size: 60px; //QUESTION: 68px as per style guide but looks huge and even overflows when the window is less than 491px wide.
-    line-height: 68px;
-    margin-left: 16px;
+    font-size: 24px;
+    line-height: 32px;
+    margin-left: 1.5rem;
     @include tablet {
       margin-left: 5%;
+      font-size: 60px;
+      line-height: 68px;
     }
     @include desktop {
       margin-left: 13%;
@@ -161,68 +171,85 @@ MAIN BIOGRAPHY SECTION
 
   &__container {
     padding: 5% 3%;
-    .main__img {
-      margin-bottom: 5%;
-      width: 100%;
-      height: 100%;
-      object-fit: fill;
-      @include tablet {
-      }
-      @include desktop {
-        padding-left: 15%;
-        padding-right: 15%;
-      }
+  }
+
+  &__img {
+    margin-bottom: 3%;
+    width: 100%;
+
+    @include tablet {
     }
-
-    .main__quote {
-      margin-bottom: 5%;
-
-      @include tablet {
-      }
-      @include desktop {
-        padding-left: 15%;
-        padding-right: 15%;
-      }
+    @include desktop {
+      padding-left: 15%;
+      padding-right: 15%;
     }
+  }
 
-    h4 {
-      margin-bottom: 5%;
+  &__quote {
+    font-family: "avenir-bold";
+    margin-bottom: 2%;
 
-      @include tablet {
-      }
-      @include desktop {
-        padding-left: 15%;
-        padding-right: 15%;
-      }
+    @include tablet {
     }
-
-    h3 {
-      margin-bottom: 5%;
-
-      @include tablet {
-      }
-      @include desktop {
-        padding-left: 15%;
-        padding-right: 15%;
-      }
+    @include desktop {
+      padding-left: 15%;
+      padding-right: 15%;
     }
+  }
 
-    .main__paragraph-container {
-      display: flex;
-      flex-direction: column;
-      @include tablet {
-        flex-direction: row;
-        #first-paragraph {
-          padding-right: 12px;
-        }
-        #second-paragraph {
-          padding-left: 12px;
-        }
-      }
-      @include desktop {
-        padding-left: 15%;
-        padding-right: 15%;
-      }
+  &__quote-author {
+    font-family: "avenir-demi";
+    margin-bottom: 3%;
+
+    @include tablet {
+    }
+    @include desktop {
+      padding-left: 15%;
+      padding-right: 15%;
+    }
+  }
+
+  &__artist-names {
+    font-family: "avenir-bold";
+    margin-bottom: 1.5%;
+
+    @include tablet {
+    }
+    @include desktop {
+      padding-left: 15%;
+      padding-right: 15%;
+    }
+  }
+
+  &__paragraph-container {
+    display: flex;
+    flex-direction: column;
+    @include tablet {
+      flex-direction: row;
+    }
+    @include desktop {
+      padding-left: 15%;
+      padding-right: 15%;
+    }
+  }
+
+  &__first-paragraph {
+    @extend .h4-paragraph;
+    @include tablet {
+      padding-right: 12px;
+    }
+    @include desktop {
+      padding-right: 20px;
+    }
+  }
+
+  &__second-paragraph {
+    @extend .h4-paragraph;
+    @include tablet {
+      padding-left: 12px;
+    }
+    @include desktop {
+      padding-left: 20px;
     }
   }
 }
@@ -257,8 +284,8 @@ MAIN BIOGRAPHY SECTION
       // margin-right: 230px;
     }
     img {
-      margin: 1.5rem 0 0;
-      width: 90vw;
+      margin: 1.5rem auto 0;
+      width: 100%;
       @include tablet {
         width: 28.5vw;
       }
@@ -280,7 +307,7 @@ MAIN BIOGRAPHY SECTION
   color: #ffffff;
   padding: 2% 3%; // * * THIS PADDING CODE IS BEING USED TWICE * *
   @include desktop {
-    padding: 2% 10%;
+    padding: 3% 10%;
   }
 
   /* ===============================
@@ -294,6 +321,7 @@ MAIN BIOGRAPHY SECTION
     margin-bottom: 1%;
     @include tablet {
       flex-direction: row;
+      margin-bottom: 4%;
     }
     .footer__heading {
       @extend .section-heading;
@@ -340,6 +368,7 @@ MAIN BIOGRAPHY SECTION
     margin-bottom: 1%;
     @include tablet {
       flex-direction: row;
+      padding-bottom: 1.5%;
     }
 
     div {
@@ -349,7 +378,7 @@ MAIN BIOGRAPHY SECTION
       }
       .footer__contact-name-and-organization {
         font-family: "avenir-demi";
-        margin-bottom: 5%;
+        margin-bottom: 6%;
       }
       .footer__contact-regions {
         margin-bottom: 5%;
